--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     style="color: dark green"
                     rel="noopener"
                     target="_blank"
-                    href="https://gradev-io.github.io/Home/"
+                    href="https://gradev-io.github.io/GradHome/"
                     >@Gradev</a
                   >-2023
                 </p>
